test/e2e/features/agentgateway/deployer/testdata/agentgateway-with-parameters.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayParameters
metadata:
  name: agw-params
  namespace: default
spec:
  deployment:
    metadata:
      labels:
        test-label: v1
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: agw-deployer-test
  namespace: default
spec:
  gatewayClassName: agentgateway
  infrastructure:
    parametersRef:
      group: agentgateway.dev
      kind: AgentgatewayParameters
      name: agw-params
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: All
